# riscv_simple_py

./: .gitignore  README.md  flake.nix  lint.sh  pyproject.toml
src/riscv_py_emu/: emulator.py
src/riscv_py_emu/bus/: controller.py
src/riscv_py_emu/cpu/: exception.py  register.py  unit.py
src/riscv_py_emu/dram/: _dram_controller.py  controller.py  exception.py  memory.py
src/riscv_py_emu/instruction/: bits_parser.py  exception.py  opcode.py  rv32i_operations.py  rv32i_parsers.py  rv32i_ui_operations.py
tests/: test_bits_parser.py  test_bus_controller.py  test_cpu.py  test_dram_controller.py  test_operation_size.py
