[build-system]
requires = [
    "flit_core ~= 3.8",
]
build-backend = "flit_core.buildapi"

[project]
name = "riscv-py-emu"
authors = [{name = "Darek D", email = "darekduda21@gmail.com"}]
description = "Simple RISC-V emulator written in py"
requires-python = ">=3.11"
dependencies = [
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black>=22.12.0",
    "flit>=3.8.0",
    "isort>=5.10.1",
    "pytest>=7.0.0",
    "ruff>=0.0.173",
]

[tool.black]
target-version = ["py311"]

[tool.isort]
profile = "black"
reverse_relative = "true"
no_lines_before = ["LOCALFOLDER"]

[tool.ruff]
line-length = 88
exclude = [
    ".git",
    ".nox",
    ".pants.d",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "dist",
    "venv",
]
