[build-system]
requires = [
    "flit_core ~= 3.9",
]
build-backend = "flit_core.buildapi"

[project]
name = "riscv-py-emu"
authors = [{name = "Dariusz D", email = "darekduda21@gmail.com"}]
description = "Simple RISC-V emulator written in py"
requires-python = ">=3.11"
dependencies = [
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black==23.9.1",
    "flit==3.9.0",
    "pytest==7.4.3",
    "ruff==0.1.6",
]

[tool.black]
target-version = ["py311"]

[tool.isort]
profile = "black"
reverse_relative = "true"
no_lines_before = ["LOCALFOLDER"]

[tool.ruff]
line-length = 88
exclude = [
    ".git",
    ".nox",
    ".pants.d",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "dist",
    "venv",
]
# pyflakes, flake8-bugbear, pycodestyle, isort
select = ["F", "B", "E", "W", "I"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = ["src"]

