[build-system]
requires = [
    "flit_core ~= 3.9",
]
build-backend = "flit_core.buildapi"

[project]
name = "riscv-py-emu"
authors = [{name = "Dariusz D", email = "darekduda21@gmail.com"}]
description = "Simple RISC-V emulator written in Python"
requires-python = ">=3.11"
dependencies = [
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "flit==3.9.0",
    "pytest==7.4.3",
    "ruff==0.1.6",
]

[tool.ruff]
line-length = 88
exclude = [
    ".git",
    ".nox",
    ".pants.d",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "dist",
    "venv",
]

# TODO: Check those, once newer version will be released in NixOS
# pyflakes, flake8-bugbear, pycodestyle, isort
select = ["F", "B", "E", "W", "I"]

# Note: Ruff supports a top-level `src` option in lieu of isort's `src_paths` setting.
src = ["src", "tests"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = ["src"]

